# Audio-Data-Creation

./: .gitignore  DATA_CARD.md  README.md  pyproject.toml  requirements.txt
experiments/results/: example_results.json
scripts/: download_sample.py  evaluate_with_domain_model.py  generate_synthetic.py  plot_ablations.py  plot_report.py  run_ablations.py  run_pipeline.py
src/audio_curation/: __init__.py  deduplication.py  diversity.py  pipeline.py  quality.py
src/audio_curation/synthetic/: __init__.py  evaluator.py  gap_analyzer.py  mixer.py  tts_generator.py
tests/: test_deduplication.py  test_quality.py  test_synthetic.py
