[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "audio-curation"
version = "0.1.0"
description = "Audio training data curation pipeline"
authors = [{name = "Kartik Munjal", email = "kartikmunjal19@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
